// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`table borders > border styles > renders table with ASCII border style 1`] = `
"+--------------+--------------+--------------+
| Header 1     | Header 2     | Header 3     |
+--------------+--------------+--------------+
| Row 1 Cell 1 | Row 1 Cell 2 | Row 1 Cell 3 |
+--------------+--------------+--------------+
| Row 2 Cell 1 | Row 2 Cell 2 | Row 2 Cell 3 |
+--------------+--------------+--------------+"
`;

exports[`table borders > border styles > renders table with DEFAULT border style 1`] = `
"┌──────────────┬──────────────┬──────────────┐
│ Header 1     │ Header 2     │ Header 3     │
├──────────────┼──────────────┼──────────────┤
│ Row 1 Cell 1 │ Row 1 Cell 2 │ Row 1 Cell 3 │
├──────────────┼──────────────┼──────────────┤
│ Row 2 Cell 1 │ Row 2 Cell 2 │ Row 2 Cell 3 │
└──────────────┴──────────────┴──────────────┘"
`;

exports[`table borders > border styles > renders table with DOTS border style 1`] = `
"┌┈┈┈┈┈┈┈┈┈┈┈┈┈┈┬┈┈┈┈┈┈┈┈┈┈┈┈┈┈┬┈┈┈┈┈┈┈┈┈┈┈┈┈┈┐
┊ Header 1     ┊ Header 2     ┊ Header 3     ┊
├┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┤
┊ Row 1 Cell 1 ┊ Row 1 Cell 2 ┊ Row 1 Cell 3 ┊
├┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┤
┊ Row 2 Cell 1 ┊ Row 2 Cell 2 ┊ Row 2 Cell 3 ┊
└┈┈┈┈┈┈┈┈┈┈┈┈┈┈┴┈┈┈┈┈┈┈┈┈┈┈┈┈┈┴┈┈┈┈┈┈┈┈┈┈┈┈┈┈┘"
`;

exports[`table borders > border styles > renders table with DOUBLE border style 1`] = `
"╔══════════════╦══════════════╦══════════════╗
║ Header 1     ║ Header 2     ║ Header 3     ║
╠══════════════╬══════════════╬══════════════╣
║ Row 1 Cell 1 ║ Row 1 Cell 2 ║ Row 1 Cell 3 ║
╠══════════════╬══════════════╬══════════════╣
║ Row 2 Cell 1 ║ Row 2 Cell 2 ║ Row 2 Cell 3 ║
╚══════════════╩══════════════╩══════════════╝"
`;

exports[`table borders > border styles > renders table with MARKDOWN border style 1`] = `
"|--------------|--------------|--------------|
| Header 1     | Header 2     | Header 3     |
|--------------|--------------|--------------|
| Row 1 Cell 1 | Row 1 Cell 2 | Row 1 Cell 3 |
|--------------|--------------|--------------|
| Row 2 Cell 1 | Row 2 Cell 2 | Row 2 Cell 3 |
|--------------|--------------|--------------|"
`;

exports[`table borders > border styles > renders table with MINIMAL border style 1`] = `
"----------------------------------------------
  Header 1       Header 2       Header 3      
----------------------------------------------
  Row 1 Cell 1   Row 1 Cell 2   Row 1 Cell 3  
----------------------------------------------
  Row 2 Cell 1   Row 2 Cell 2   Row 2 Cell 3  
----------------------------------------------"
`;

exports[`table borders > border styles > renders table with NO_BORDER border style 1`] = `
" Header 1      Header 2      Header 3     
 Row 1 Cell 1  Row 1 Cell 2  Row 1 Cell 3 
 Row 2 Cell 1  Row 2 Cell 2  Row 2 Cell 3 "
`;

exports[`table borders > border styles > renders table with ROUNDED border style 1`] = `
"╭──────────────┬──────────────┬──────────────╮
│ Header 1     │ Header 2     │ Header 3     │
├──────────────┼──────────────┼──────────────┤
│ Row 1 Cell 1 │ Row 1 Cell 2 │ Row 1 Cell 3 │
├──────────────┼──────────────┼──────────────┤
│ Row 2 Cell 1 │ Row 2 Cell 2 │ Row 2 Cell 3 │
╰──────────────┴──────────────┴──────────────╯"
`;

exports[`table borders > border styles > renders table with mixed alignments using ROUNDED border style 1`] = `
"╭────────────┬──────────────┬──────────────────╮
│ Left Align │ Center Align │      Right Align │
├────────────┼──────────────┼──────────────────┤
│ Short      │ Medium Text  │ Longer Text Here │
├────────────┼──────────────┼──────────────────┤
│ A          │ BB           │ CCC              │
╰────────────┴──────────────┴──────────────────╯"
`;

exports[`table borders > border styles > renders table with mixed styling using NO_BORDER style 1`] = `
"  Mixed    Styling    Example  
  Left     Center       Right  
  Top      Middle      Bottom  "
`;

exports[`table borders > border styles > renders table with multiline content using DOUBLE border style 1`] = `
"╔══════════════════╦════════════════╗
║ Multiline Header ║ Regular Header ║
╠══════════════════╬════════════════╣
║ Line 1           ║ Regular Cell   ║
║ Line 2           ║                ║
║ Line 3           ║                ║
╠══════════════════╬════════════════╣
║ Regular Cell 1   ║ Regular Cell 2 ║
╚══════════════════╩════════════════╝"
`;

exports[`table borders > border styles > renders table with spanning cells using DEFAULT border style 1`] = `
"┌─────────────────┬────────────────┐
│ Spanning Header │ Regular Header │
├─────────────────┴────────────────┤
│ Spanning Content                 │
├─────────────────┬────────────────┤
│ Regular Cell 1  │ Regular Cell 2 │
└─────────────────┴────────────────┘"
`;

exports[`table borders > border styles > renders table with truncated content using ASCII border style 1`] = `
"+------------+----------------------+
| Truncated… | Regular Header       |
+------------+----------------------+
| This cont… | Regular Cell         |
+------------+----------------------+
| Also trun… | Another Regular Cell |
+------------+----------------------+"
`;

exports[`table borders > border styles > renders table with vertical alignments using DOTS border style 1`] = `
"┌┈┈┈┈┈┈┈┬┈┈┈┈┈┈┈┈┬┈┈┈┈┈┈┈┈┐
┊ Top   ┊ Middle ┊ Bottom ┊
┊ Align ┊ Align  ┊ Align  ┊
├┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┤
┊ Short ┊        ┊ Long   ┊
┊       ┊ Medium ┊ Text   ┊
┊       ┊ Text   ┊ Here   ┊
└┈┈┈┈┈┈┈┴┈┈┈┈┈┈┈┈┴┈┈┈┈┈┈┈┈┘"
`;

exports[`table borders > border styles > renders table with word wrapping using MARKDOWN border style 1`] = `
"|--------|-------------|
| Short  | Long Header |
| Header | That Should |
|        | Wrap        |
|--------|-------------|
| Short  | This is a   |
|        | very long   |
|        | cell        |
|        | content     |
|        | that should |
|        | be wrapped  |
|        | across      |
|        | multiple    |
|        | lines       |
|--------|-------------|
| Also   | Another     |
| Short  | long        |
|        | content     |
|        | that needs  |
|        | to be       |
|        | wrapped to  |
|        | maintain    |
|        | readability |
|--------|-------------|"
`;

exports[`table borders > border styles > should support colored borders > table-colored-borders 1`] = `
"[90m┌[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m┬[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m┐[39m
[90m│[39m Header 1 [90m│[39m Header 2 [90m│[39m
[90m├[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m┼[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m┤[39m
[90m│[39m [31mValue 1[39m  [90m│[39m Value 2  [90m│[39m
[90m└[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m┴[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m─[39m[90m┘[39m"
`;

exports[`table borders > border styles > should support custom border characters > table-custom-borders 1`] = `
"╔══════╤═════╤══════╗
║ foo  │ bar │ baz  ║
╟──────┼─────┼──────╢
║ frob │ bar │ quuz ║
╚══════╧═════╧══════╝"
`;

exports[`table borders > border styles > should support disabled decoration lines (NO_BORDER specific) > table-no-border-specific 1`] = `
" foo         bar  baz  
 frobnicate  bar  quuz "
`;

exports[`table borders > border styles > should support multiple different colors for various border components > table-multi-colored-borders 1`] = `
"[32m┌[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m┬[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m┬[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m┬[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m─[39m[32m┐[39m
[34m│[39m   Server   [34m│[39m Load [34m│[39m  Uptime [34m│[39m   Status    [34m│[39m
[35m├[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m┼[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m┼[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m┼[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m┤[39m
[34m│[39m API Server [34m│[39m [32m28%[39m  [34m│[39m 24d 12h [34m│[39m [32m● Online[39m   [34m│[39m
[35m├[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m┼[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m┼[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m┼[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m┤[39m
[34m│[39m Database   [34m│[39m [33m78%[39m  [34m│[39m 15d 6h  [34m│[39m [33m● Warning[39m  [34m│[39m
[35m├[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m┼[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m┼[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m┼[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m─[39m[35m┤[39m
[34m│[39m Cache      [34m│[39m [31m92%[39m  [34m│[39m 7d 3h   [34m│[39m [31m● Critical[39m [34m│[39m
[31m└[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m┴[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m┴[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m┴[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m─[39m[31m┘[39m"
`;

exports[`table borders > cell alignment > should support different cell alignments with borders > table-alignment-with-borders 1`] = `
"┌──────┬────────┬───────┐
│ Left │ Center │ Right │
├──────┼────────┼───────┤
│ 1    │   2    │     3 │
└──────┴────────┴───────┘"
`;

exports[`table borders > padding configuration > should handle zero padding > table-zero-padding 1`] = `
"┌─┬─┐
│A│B│
└─┴─┘"
`;

exports[`table borders > padding configuration > should respect padding settings with borders > table-padding-with-borders 1`] = `
"┌─────┬─────┐
│  A  │  B  │
└─────┴─────┘"
`;
